# todo_analytics

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  nginx.conf  pyproject.toml
entrypoints/: kafka-consumer.sh  schemas.sh
src/: consumer.py  main.py  schemas.py
src/application/: dependencies.py
src/application/use_cases/: actions.py  analytics.py  interfaces.py  kafka.py
src/domain/entities/: actions.py  analytics.py  kafka.py
src/domain/enums/: base.py
src/domain/exceptions/: actions.py
src/domain/permissions/: base.py  users.py
src/domain/utils/: action_at.py  period.py
src/infrastructure/: config.py
src/infrastructure/managers/: database.py  kafka.py
src/infrastructure/repositories/: actions.py  interfaces.py
src/infrastructure/schemas/: actions.py
src/infrastructure/utils/: kafka.py
src/migrations/: actions.py
src/presentation/api/: routers.py
src/presentation/api/v1/: actions.py  analytics.py
src/schemas/: actions.py
src/tests/: api_tests.py  conftest.py  factories.py
src/tests/presentation/api/v1/: test_actions.py  test_analytics.py  test_schemathesis.py
